--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     this.$tooltips('<i class="ui-icon iconfont icon-'+ type +'"></i> 图标和图标样式需要自己设置！', {type: type})
                 },
                 timeout: function(time) {
-                    this.tooltips('我 5 秒后自动消失，默认是3秒哦！', time);
+                    this.$tooltips('我 5 秒后自动消失，默认是3秒哦！', time);
                 },
                 callback: function() {
                     this.$tooltips('过会关闭的时候 alert(1);', {
